* Also added Ubuntu 20.04, 22.04 and Python 3.12 in CI test configurations ({uri-issue}455[#455])
* Using cibuildwheel for cross-platform and cross-python builds Windows, Linux, macOS ({uri-issue}451[#451])
* Deprecation cleanup in CI ({uri-issue}452[#452])
* Updated our dependencies to the latest stable versions ({uri-issue}454[#454])


== v1.2.0 - 2022-12-23

The Rudolph Desktop Protocol!

Read the release blog post: https://www.gosecure.net/blog/2022/12/23/a-new-pyrdp-release-the-rudolph-desktop-protocol/

=== Release Highlights

* Net-NTLMv2 Hash Capture
* 6x faster `pyrdp-convert`
* RDP Version 10.9 and 10.10 supported
* Python 3.10 support
* Plugged memory leak and fixed important long-standing bugs

Full list of changes follows.

=== Backwards Compatibility Changes

* Collected files are now stored as their SHA-256 hash value instead of SHA-1 ({uri-issue}389[#389])
* The log field `shasum` now holds the SHA-256 hash value of files instead of SHA-1 ({uri-issue}389[#389])

=== Security

* Backported security fixes from rdesktop to our Python C extension doing RLE processing.
  Exploitability wasn't verified. ({uri-issue}357[#357])

=== Enhancements

* Support for RDP version 10.9 and 10.10 ({uri-issue}396[#396], {uri-issue}397[#397])
* Capture and log NetNTLMv2 hash if the server enforces NLA and we don't have the NLA redirection attack activated ({uri-issue}367[#367], {uri-issue}358[#358])
* The Net-NTLMv2 challenge can be defined via `--ssp-challenge` allowing to do more efficient parallel cracking or leverage rainbow tables ({uri-issue}405[#405], {uri-issue}418[#418])
* `pyrdp-convert` video conversion is now 6x faster! (See {uri-issue}349[#349])
* `pyrdp-convert` video format can be viewed during encoding and will play even if the conversion process crashes or is halted ({uri-issue}352[#352], {uri-issue}353[#353])
* `pyrdp-convert` can now handle exported PDUs (decrypted pcaps) with multiple sessions in them ({uri-issue}313[#313], {uri-issue}368[#368])