@@ -4,7 +4,7 @@ name: Publish Docker images
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
     tags:
       - 'v*'
 
@@ -27,6 +27,9 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: gosecure/pyrdp
+          tags: |
+            # set devel tag for default branch
+            type=raw,value=devel,enable={{is_default_branch}}
       
       - name: Build and push regular Docker image
         uses: docker/build-push-action@v2
@@ -60,6 +63,9 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: gosecure/pyrdp
+          tags: |
+            # set devel tag for default branch
+            type=raw,value=devel,enable={{is_default_branch}}
           flavor: |
             suffix=-slim,onlatest=true
 
