@@ -41,6 +41,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * Using cibuildwheel for cross-platform and cross-python builds Windows, Linux, macOS ({uri-issue}451[#451])
 * Deprecation cleanup in CI ({uri-issue}452[#452])
 * Updated our dependencies to the latest stable versions ({uri-issue}454[#454])
+* Renamed master branch to main
 
 
 == v1.2.0 - 2022-12-23
